# ASCC-Capstone

./: .env-local  .gitignore  .gitlab-ci.yml  .gitmodules  DEPLOY.md  LICENSE  MPPW_RELEASE_NOTES.md  README.md  README_WSL.md  mppw-stack.yml  pyproject.toml  pytest.ini  url.txt
.github/workflows/: ci.yml
.gitlab-ci/: install_docker_cli.debian.sh  install_sshgit.debian.sh
api/: .gitignore  Dockerfile  README.md  pyproject.toml
api/mppapi/: __init__.py  main.py
api/scripts/: docker-build.py  docker-compose.yaml
containers/: mppw-registry.dev.yml  mppw-registry.yml  mppw-stack.bmark.yml  mppw-stack.dev.yml  mppw-stack.jupyter.yml  mppw-stack.yml
containers/mppw/: .gitignore  Dockerfile  ssh_config
containers/mppw-jupyterhub/: Dockerfile  base.py  entrypoint.sh  jupyterhub_config.py  skel_notebooks.py
containers/mppw-jupyterhub/mppwauth/: README.md  mppwauth.py  pyproject.toml  setup.py
containers/mppw-llm-tokenizer/: Dockerfile
containers/mppw-mongodb/: 50-init-root-password-keyfile.sh  Dockerfile  rs-entrypoint.sh  rs-init.js  rs-init.sh
containers/mppw-nginx/: 40-init-certificates.sh  Dockerfile  default.conf.template
containers/mppw-registry/: Dockerfile  entrypoint.sh
docs/: README.md  architecture.md  data-warehouse-ui-sketch.pptx  modules.dia  new-schema-example.dia  overview.pptx  provenance.md  schema-example.dia  schema.dia  schema.urns.txt
mppw/: __init__.py  app.py  artifact_endpoints.py  artifacts.py  dependencies.py  endpoints.py  main.py  models.py  operation_endpoints.py  operations.py  project_endpoints.py  projects.py  repositories.py  schema_endpoints.py  security.py  services.py  storage.py
mppw/guide/: mkdocs.yml
mppw/guide/docs/: architecture.md  deploy.md  index.md  notes.md  release_notes.md  roadmap.md
mppw/guide/docs/data_integration/: data_entry.md  (+1 more)
mppw/migrations/: __init__.py  alembic.ini  env.py  script.py.mako
mppw/migrations/mongodb/: 20220106213202_initial.py  20220113185527_core.py  20220120032759_projects.py  20220120033703_seed_projects.py  20220201175716_seed_more_projects.py  20220201193449_add_user_scopes_claims.py  20220321192855_operations_ftindex.py  20220601192603_artifacts_spatial_parent_index.py  20230224205953_add_user_schemas.py
mppw/migrations/versions/: feed623dcaaa_init.py
mppw/models/: __init__.py
mppw/schemas/: README.md  __init__.py  artifact_schema.py  operation_schema.py
mppw/schemas/artifacts/: digital_database_bucket.json5  digital_document_bounding_box.json5  digital_document_compression_properties.json5  digital_document_named_dimensions.json5  digital_document_shear_properties.json5  digital_document_tensile_properties.json5  digital_fiducial_points.json5  digital_file.json5  digital_file_bucket.json5  digital_point_cloud.json5  digital_template.json5  digital_time_series.json5  document_named_dimensions.json5  document_tensile_properties.json5  fiducial_points.json5  frame_force_displacement.json5
mppw/schemas/operations/: build_fff.json5  characterize_compression_test.json5  characterize_dimensioning.json5  characterize_shear_test.json5  characterize_tensile_test.json5  compute_default.json5  default.json5  prepare_machining.json5  prepare_waterjetcut.json5  template.json5
mppw/services/: __init__.py  artifact_services.py  operation_services.py  provenance_services.py  schema_services.py  service_layer.py
mppw/services/artifacts/: digital_bounding_box_services.py  digital_database_bucket_services.py  digital_file_bucket_services.py  digital_file_services.py  digital_point_cloud_services.py  digital_time_series_services.py  mongodb_time_series_services.py
mppw/services/operations/: characterize_compression_test_services.py  characterize_shear_test_services.py  characterize_tensile_test_services.py
mppw/ui/: index.css  index.html  index.js
mppw/ui/vues/: about-page.vue  app.vue  artifacts-page.vue  browse-operations-page.vue  browse-ops-page.vue  browse-page.vue  browse-schema-page.vue  config-page.vue  config-projects-tab.vue  config-users-tab.vue  devtools-shim.js  login-page.vue  operation-artifact-node.vue  operation-attachments-node.vue  operation-metadata.vue  operations-page.vue  remote-vue-module.js  remote-vue.js  scatter-plot.vue  vues.js
mppw_llm_tokenizer/: README .md
mppw_llm_tokenizer/app/: __init__.py  csv_log_processor.py  main.py
scripts/: app.py  docker.py  docker_build.py  gen_erd.py  gen_user_emails.py  migrations.py
tests/: __init__.py  conftest.py  fixtures_api.py  fixtures_services.py  test_artifacts_endpoints.py  test_example_fff_dataflow.py  test_geometry.py  test_models.py  test_operations_endpoints.py  test_point_cloud_dbvox.py  test_project_endpoints.py  test_provenance.py  test_provenance_endpoints.py  test_schema.py  test_security_endpoints.py  test_services.py  test_time_series.py
tests/datasets/: flir_toolhead_sample.mdb.json
(+23 files in other folders)
