[tool.poetry]
name = "mppw"
version = "0.12.0"
description = ""
authors = ["ASCC <ascc@maine.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
argh = "^0.26.2"
furl = "^2.1.3"
toml = "^0.10.2"
docker = "^6"
docker-compose = "^1.29.2"
arrow = "^1.2.2"
pyjson5 = "^1.6.1"
importlib-metadata = "^4.11.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = {version = "^22.3.0", allow-prereleases = true}

[tool.poetry.scripts]
mppw_docker = "scripts.docker:main"

[tool.poetry.group.dev.dependencies]
licensecheck = "^2023.5.1"
testcontainers-mongodb = "^0.0.1rc1"

[tool.black]
extend-exclude = '''
(^/(containers|.*analysis|mppw_clients|mppw/pcl))
'''

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
