[tool.poetry]
name = "mppw"
version = "0.14.0" 
description = ""
license = "GPL-3.0-only"
authors = ["ASCC <ascc@maine.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
argh = "^0.26.2"
furl = "^2.1.3"
toml = "^0.10.2"
docker = "^6"
docker-compose = "^1.29.2"
arrow = "^1.2.2"
pyjson5 = "^1.6.1"
importlib-metadata = "^4.11.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = {version = "^22.3.0", allow-prereleases = true}
# For testing, for now
# TODO Fix this up
fastapi = "^0.68.2"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
# PIN BCRYPT
bcrypt = "4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
pymongo-migrate = "^0.11.0"
aiofiles = "^0.8.0"
dbvox = { git = "git@gitlab.com:composites-maine-edu/advancing-rapid-prototyping/dbvox.git", branch = "main" }
# START for pcl
numpy = "1.21"
# END for pcl
networkx = "^2.8.1"
json-stream = "^2.0.2"
mongomock = "^4.1.2"
pymongo = "^4.3.3"
watchgod = "^0.8.2"
dotmotif = "^0.13.0"
open3d = "^0.17.0"
# REQUIRED for open3d
scikit-learn = "^1.2.2"
# REQUIRED for open3d
addict = "^2.4.0"
# REQUIRED for open3d
pillow = "^9.5.0"
grand-cypher = {git = "https://github.com/aplbrain/grand-cypher.git", rev = "v0.4.0"}
requests-toolbelt = "^1"

[tool.poetry.scripts]
mppw_docker = "scripts.docker:main"

[tool.poetry.group.dev.dependencies]
licensecheck = "^2023.5.1"
testcontainers-mongodb = "^0.0.1rc1"
papermill = "^2.5.0"
nbconvert = "^7.14.2"
stream-zip = "^0.0.71"

[tool.black]
extend-exclude = '''
(^/(containers|.*analysis|mppw_clients|mppw/pcl))
'''

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
