[tool.poetry]
name = "mppapi"
version = "0.1.0"
description = ""
authors = ["ASCC <ascc@maine.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.2"
motor = "^2.5.1"
argh = "^0.26.2"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[tool.poetry.dev-dependencies]
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
